crates/python_parser/tests/snapshots/invalid_syntax@expressions__unary__no_expression_0.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/unary/no_expression_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Expr(
                ExprStmt {
                    range: 0..3,
                    value: UnaryOp(
                        UnaryOpExpr {
                            range: 0..3,
                            op: Not,
                            operand: Name(
                                NameExpr {
                                    range: 3..3,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 5..10,
                    value: BinOp(
                        BinOpExpr {
                            range: 5..10,
                            left: Name(
                                NameExpr {
                                    range: 5..6,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                NameExpr {
                                    range: 9..10,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | not
  |    ^ Syntax Error: Expected an expression
2 | 
3 | x + y
  |
